[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.7"
bitflags = "2.0.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[profile.release]
debug = true