[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# simple-chunk-allocator = "0.1.5"
buddy_system_allocator = "0.7"
bitflags = "2.0.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
array-macro = "2.0.0"
rustsbi = "0.3.2"
sbi-rt = "0.0.2"

[profile.release]
debug = true